# ML4MSD---Final-Project---SarahM

./: pyproject.toml
hdpe_hbn_project/md/: md_with_mlip.ipynb  pyproject.toml
hdpe_hbn_project/results/: adsorption_energies.txt  config_000.traj  config_000_final.xyz  config_001.traj  config_001_final.xyz  config_002.traj  config_002_final.xyz  config_003.traj  config_003_final.xyz  config_004.traj  config_004_final.xyz  config_005.traj  config_005_final.xyz  config_006.traj  config_006_final.xyz  config_007.traj  config_007_final.xyz  config_008.traj  config_008_final.xyz  config_009.traj  config_009_final.xyz  config_010.traj  config_010_final.xyz  config_011.traj  config_011_final.xyz  config_012.traj  config_012_final.xyz  config_013.traj  config_013_final.xyz  config_014.traj  config_014_final.xyz  config_015.traj  config_015_final.xyz  config_016.traj  config_016_final.xyz  config_017.traj  config_017_final.xyz  config_018.traj  config_018_final.xyz  config_019.traj  (+1 more)
hdpe_hbn_project/structures/: config_000.xyz  config_001.xyz  config_002.xyz  config_003.xyz  config_004.xyz  config_005.xyz  config_006.xyz  config_007.xyz  config_008.xyz  config_009.xyz  config_010.xyz  config_011.xyz  config_012.xyz  config_013.xyz  config_014.xyz  config_015.xyz  config_016.xyz  config_017.xyz  config_018.xyz  config_019.xyz  generate_structures.py
hdpe_hbn_project/visualization/: visualize.ipynb
