[project]
name = "ml4msd-files"
version = "0.1.0"
description = "Repository for ML4MSD Course"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "dscribe>=2.1.2",
    "elementembeddings>=0.6.1",
    "jupyter>=1.1.1",
    "matfold>=1.3.2",
    "matminer>=0.9.3",
    "matplotlib>=3.10.6",
    "mp-api>=0.45.11",
    "nglview>=3.1.4",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pymatgen>=2025.6.14",
    "pymatviz>=0.17.2",
]
